final commit for version 6.0