@@ -144,19 +144,19 @@ public final class YMultiInstanceAttributes implements Cloneable, YVerifiable {
     public void setProperties(String minInstancesQuery, String maxInstancesQuery,
                               String thresholdQuery, String creationMode) {
         try {
-            _minInstances = new Integer(minInstancesQuery);
+            _minInstances = Integer.valueOf(minInstancesQuery);
         } catch (NumberFormatException e) {
             _minInstancesQuery = minInstancesQuery;
             _minInstances = null;
         }
         try {
-            _maxInstances = new Integer(maxInstancesQuery);
+            _maxInstances = Integer.valueOf(maxInstancesQuery);
         } catch (NumberFormatException e) {
             _maxInstancesQuery = maxInstancesQuery;
             _maxInstances = null;
         }
         try {
-            _threshold = new Integer(thresholdQuery);
+            _threshold = Integer.valueOf(thresholdQuery);
         } catch (NumberFormatException e) {
             _thresholdQuery = thresholdQuery;
             _threshold = null;
@@ -263,7 +263,7 @@ public final class YMultiInstanceAttributes implements Cloneable, YVerifiable {
     private int getQueryValue(String query) throws IllegalArgumentException {
         Element element = JDOMUtil.selectElement(_task._net.getInternalDataDocument(), query);
         if (element == null) throw new IllegalArgumentException();
-        return new Integer(element.getText());
+        return Integer.parseInt(element.getText());
     }
 
 }//end class
