@@ -23,6 +23,7 @@ import org.jdom2.JDOMException;
 import org.jdom2.input.SAXBuilder;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * 
@@ -93,7 +94,10 @@ public class YAWLException extends Exception {
         return "<message>" + getMessage() + "</message>";
     }
 
-    public static YAWLException unmarshal(Document exceptionDoc) throws JDOMException, IOException, ClassNotFoundException, InstantiationException, IllegalAccessException {
+    public static YAWLException unmarshal(Document exceptionDoc)
+            throws JDOMException, IOException, ClassNotFoundException,
+            InstantiationException, IllegalAccessException,
+            NoSuchMethodException, InvocationTargetException {
 
         String exceptionType = exceptionDoc.getRootElement().getName();
         if ("YDataStateException".equals(exceptionType)) {
@@ -105,7 +109,8 @@ public class YAWLException extends Exception {
         if ("YDataValidationException".equals(exceptionType)) {
             return YDataValidationException.unmarshall(exceptionDoc);
         }
-        YAWLException e = (YAWLException) Class.forName(exceptionType).newInstance();
+        YAWLException e = (YAWLException) Class.forName(exceptionType)
+                .getDeclaredConstructor().newInstance();
         e.setMessage(parseMessage(exceptionDoc));
         return e;
     }
